# mgrant-obs-deb-keyring

./: ChangeLog  Makefile.am  NEWS  README  bootstrap.sh  configure.ac  gen-keyring.sh
.github/workflows/: build-test.yml
misc/: TODO.txt
src/conf/: Makefile.am  home_m-grant-prg.gpg
src/conf/etc/: .#lk0x000055701d14f500.leonidas.6469  Makefile.am  home_m-grant-prg.gpg
src/data/: Makefile.am  home_m-grant-prg.pgp
