#########################################################################
#									#
# Author: Copyright (C) 2022, 2023  Mark Grant				#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0-only					#
#									#
# Purpose:								#
# AutoMake script file to install OBS keyring.				#
#									#
#########################################################################


confdir = $(sysconfdir)/apt/trusted.gpg.d

conf_DATA = home_m-grant-prg.gpg

EXTRA_DIST = $(srcdir)/home_m-grant-prg.gpg

CLEANFILES = *.tmp home_m-grant-prg.gpg

