#########################################################################
#									#
# Author: Copyright (C) 2025  Mark Grant				#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0-only					#
#									#
# Purpose:								#
# AutoMake script file to install OBS keyring.				#
#									#
#########################################################################


keyringdir = $(datadir)/keyrings

keyring_DATA = home_m-grant-prg.pgp

EXTRA_DIST = $(srcdir)/home_m-grant-prg.pgp

CLEANFILES = *.tmp home_m-grant-prg.pgp

