#########################################################################
#									#
# Script ID: src/conf/etc/Makefile.am					#
# Author: Copyright (C) 2022  Mark Grant				#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0-only					#
#									#
# Purpose:								#
# AutoMake script file to install OBS keyring.				#
#									#
#########################################################################

#########################################################################
#									#
# Changelog								#
#									#
# Date		Author	Version	Description				#
#									#
# 15/01/2022	MG	1.0.1	Initial release.			#
#									#
#########################################################################


confdir = $(sysconfdir)/apt/trusted.gpg.d

conf_DATA = home_m-grant-prg.gpg

EXTRA_DIST = $(srcdir)/home_m-grant-prg.gpg

CLEANFILES = *.tmp home_m-grant-prg.gpg

